terafix-setup/app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web1

---
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app: web1
  namespace: web1
spec:
  containers:
  - name: web1
    image: prateekkumawat/app:webapp-1
    resources:
      requests: 
        cpu: "90m"
        memory: "100Mi"
      limits:
        memory: "128Mi"
        cpu: "200m"
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web1-service
  namespace: web1
spec:
  type: ClusterIP
  selector:
    app: web1
  ports:
  - port: 8080
    targetPort: 80
    name: http
