terafix-setup/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web1-ing
  namespace: web1
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    # Rule on the Host
    match: Host(`localapp.domain2.example.com`)
    services:
    # Target a Kubernetes Service
    - kind: Service
      name: web1-service
      namespace: web1
      # Customize the connection between Traefik and the backend
      passHostHeader: true
      port: 8080
      responseForwarding:
        flushInterval: 1ms
      scheme: http
