terafix-setup/ingress1.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: api1-strip-prefix
#   namespace: api1-app
# spec:
#   stripPrefix:
#     prefixes:
#       - /api

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: api1-app-ingress
#   namespace: api1-app
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web 
#     traefik.ingress.kubernetes.io/router.middlewares: api1-app-api1-strip-prefix@kubernetescrd 
# spec:
#   ingressClassName: traefik
#   rules:
#     - host: localapp.domain2.example.com
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api1-app-svc
#                 port:
#                   number: 80

# # ---
# # apiVersion: traefik.io/v1alpha1
# # kind: IngressRoute
# # metadata:
# #   name: api1-app-ingress
# #   namespace: api1-app
# # spec:
# #   entryPoints:
# #     - web
# #   routes:
# #   - kind: Rule
# #     # Rule on the Host
# #     match: Host("localapp.domain1.example.com") && PathPrefix("/api")
# #     services:
# #     # Target a Kubernetes Service
# #     - kind: Service
# #       name: api1-app-svc
# #       namespace: api1-app
# #       # Customize the connection between Traefik and the backend
# #       passHostHeader: true
# #       port: 80
# #       responseForwarding:
# #         flushInterval: 1ms
# #       scheme: http
      

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api1-app-ingress
  namespace: api1-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - localapp.domain1.example.com
      secretName: ingress-tls
    
  rules:
    - host: webapp.domain2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api1-app-svc
                port:
                  number: 80
